<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.niennonno.chatbox.SignInActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/name_hint"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/password_hint"
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/number_hint"
            android:id="@+id/user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:hint="@string/sign_up"
                android:id="@+id/sign_up_button"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:hint="@string/log_in"
                android:id="@+id/log_in_button"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
